--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.12",
-    "@mui/material": "^5.14.12",
+    "@mui/material": "^5.14.13",
     "@mui/styled-engine-sc": "^5.14.12",
     "@mui/x-date-pickers": "^6.16.1",
+    "@reduxjs/toolkit": "^1.9.7",
     "@tailwindcss/forms": "^0.5.6",
     "autosuggest-highlight": "^3.3.4",
     "dayjs": "^1.11.10",
@@ -23,6 +24,7 @@
     "next-auth": "^4.23.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-redux": "^8.1.3",
     "styled-components": "^5.3.11"
   },
   "devDependencies": {
